[package]
name = "zingat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zingat"
path = "src/lib/mod.rs"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.63"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
derive_more = { version = "1.0.0", features = ["display", "from", "into", "constructor"] }
rand = "0.8.4"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
handlebars ={ version = "4", features = ["dir_source"] }
rocket = {version =  "0.5.0-rc.1", features = ["json"]}
structopt = "0.3"
dotenv = "0.15.0 "
tokio = "1.8.0"
crossbeam-channel = "0.5.0"
parking_lot = "0.11.1"
base64 = "0.13.0"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
strum = { version = "0.21", features = ["derive"] }